Sehr cooler Fortschritt

--- a/index.html
+++ b/index.html
@@ -1,7 +1,29 @@
 <html>
-	<head></head>
+	<head>
+		<link href="antonaustirol/semantic-ui-css/semantic.min.css" rel="stylesheet" />
+	</head>
 
 	<body>
-		<h1>Hello World!</h1>
+		<div class="ui segment">
+			<div class="ui container">
+				<h1 class="title">Aufgaben</h1>
+				<ul class="ui bulleted list">
+					<li class="item">Task 1</li>
+					<li class="item">Task 2</li>
+					<li class="item">Task 3</li>
+				</ul>
+				<div class="ui input">
+					<input type="text" placeholder="YOLO" />
+				</div>
+				<button class="ui button">Speichern</button>
+			</div>
+		</div>
+
+
+
+
+		<!-- JS -->
+		<script src="antonaustirol/jquery/dist/jquery.min.js"></script>
+		<script src="antonaustirol/semantic-ui-css/semantic.min.js"></script>
 	</body>
 </html>
