--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html ng-app="simple-kanban">
 	<head>
 		<link href="vendors/semantic-ui-css/semantic.min.css" rel="stylesheet" />
+		<link href="vendors/angular-dragula/dist/dragula.min.css" rel="stylesheet" />
 		<link rel="stylesheet" type="text/css" href="app/style.css">
 	</head>
 
@@ -17,11 +18,14 @@
 
 							<h2>{{list.listName}}</h2>
 
-							<div class="ui middle aligned divided list" dnd-list dnd-drop="drop(list, item)">
-								<div
-									class="item"
-									ng-repeat="item in list.items"
-							        dnd-draggable="item">
+							<div class="ui middle aligned divided list"
+								dragula='"common"'
+								dragula-model="list.items"
+								dragula-scope="$parent"
+								data-status="{{list.columnStatus}}">
+								<div class="item"
+									data-id="{{item.id}}"
+									ng-repeat="item in list.items">
 							        <div class="right floated content">
 							        	<div class="ui red button" ng-click="delete(item)">Löschen</div>
 							        </div>
@@ -47,7 +51,7 @@
 		<script src="vendors/jquery/dist/jquery.min.js"></script>
 		<script src="vendors/semantic-ui-css/semantic.min.js"></script>
 		<script src="vendors/angular/angular.min.js"></script>
-		<script src="vendors/angular-drag-and-drop-lists/angular-drag-and-drop-lists.min.js"></script>
+		<script src="vendors/angular-dragula/dist/angular-dragula.min.js"></script>
 		<script src="app/app.js"></script>
 	</body>
 </html>
