--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 	<head>
 		<link href="vendors/semantic-ui-css/semantic.min.css" rel="stylesheet" />
 		<link href="vendors/angular-dragula/dist/dragula.min.css" rel="stylesheet" />
-		<link rel="stylesheet" type="text/css" href="app/style.css">
+		<link href="app/style.css" rel="stylesheet">
 	</head>
 
 	<body>
