--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
 		</nav>
 		
 		<div class="ui container">
+			<h1 class="ui dividing header">Simple-Kanban</h1>
+			
 			<div ng-view></div>
 		</div>
 
